--- a/config.json
+++ b/config.json
@@ -1,26 +1,14 @@
 {
   "episodes": 200,
-  "steps": 300,
+  "steps": 20,
   "critic_type": "table",
-  "critic_nn_dims": [15, 20, 30, 5, 1],
+  "critic_nn_dims": [20, 1],
   "actor_lr": 0.1,
   "critic_lr": 0.1,
   "decay": 0.9,
   "discount": 0.9,
-  "epsilon": 0.04,
-  "epsilon_decay": 1,
-  "visualise": false,
-  "verbose": false,
-  "pole_balancing": {
-    "pole_length": 0.5,
-    "pole_mass": 0.1,
-    "cart_mass": 1,
-    "gravity": 9.8,
-    "force": 10,
-    "pole_angle_magnitude": 0.21,
-    "left_cart_bound": -2.4,
-    "right_cart_bound": -2.4,
-    "sim_timestep": 0.02,
-    "max_timesteps": 300
-  }
+  "epsilon": 0.2,
+  "epsilon_decay": 0.95,
+  "visualise": [1, 99, 199, 299],
+  "discretize": false
 }
