--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "episodes": 200,
+  "episodes": 100,
   "steps": 20,
-  "critic_type": "table",
-  "critic_nn_dims": [20, 1],
+  "critic_type": "nn",
+  "critic_nn_dims": [32, 16, 1],
   "actor_lr": 0.1,
-  "critic_lr": 0.1,
+  "critic_lr": 0.001,
   "decay": 0.9,
   "discount": 0.9,
   "epsilon": 0.2,
