--- a/config.json
+++ b/config.json
@@ -1,14 +1,13 @@
 {
-  "episodes": 100,
+  "episodes": 200,
   "steps": 20,
   "critic_type": "nn",
-  "critic_nn_dims": [32, 16, 1],
+  "critic_nn_dims": [16, 8],
   "actor_lr": 0.1,
   "critic_lr": 0.001,
   "decay": 0.9,
   "discount": 0.9,
   "epsilon": 0.2,
   "epsilon_decay": 0.95,
-  "visualise": [1, 99, 199, 299],
-  "discretize": false
+  "visualise": [1, 99, 199, 299]
 }
