--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "episodes": 200,
-  "steps": 40,
+  "episodes": 2000,
+  "steps": 300,
   "critic_type": "nn",
   "critic_nn_dims": [16, 8],
   "actor_lr": 0.1,
@@ -8,6 +8,6 @@
   "decay": 0.9,
   "discount": 0.9,
   "epsilon": 0.2,
-  "epsilon_decay": 0.95,
-  "visualise": [1, 99, 199, 299]
+  "epsilon_decay": 0.99,
+  "visualise": [1, 99, 199, 299, 999, 1999]
 }
