--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
   "episodes": 200,
   "steps": 40,
   "critic_type": "nn",
-  "critic_nn_dims": [16, 8],
+  "critic_nn_dims": [16],
   "actor_lr": 0.1,
-  "critic_lr": 0.001,
+  "critic_lr": 0.01,
   "decay": 0.9,
   "discount": 0.9,
   "epsilon": 0.2,
