--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "episodes": 2000,
+  "episodes": 3000,
   "steps": 300,
-  "critic_type": "nn",
-  "critic_nn_dims": [16],
+  "critic_type": "table",
+  "critic_nn_dims": [16, 8],
   "actor_lr": 0.1,
-  "critic_lr": 0.01,
+  "critic_lr": 0.1,
   "decay": 0.9,
   "discount": 0.9,
   "epsilon": 0.2,
