--- a/config.json
+++ b/config.json
@@ -8,6 +8,6 @@
   "decay": 0.9,
   "discount": 0.9,
   "epsilon": 0.2,
-  "epsilon_decay": 0.99,
-  "visualise": [1, 99, 199, 299, 999, 1999]
+  "epsilon_decay": 0.995,
+  "visualise": [499, 999, 1999, 2999]
 }
