feat: add gambler problem (#4)
* feat: add gambler problem

* refactor: adapt gambler problem

* refactor: finalize gambler

* feat: add gambler problem

* refactor: adapt gambler problem

* refactor: finalize gambler

* fix: commiting back config that was removed by force-push

* refactor: change reinforcement strategy

* fix: fix bug

* feat: revert bad requested change by Thomas

range of values is 0..100, which is 101 values, so original was correct

Co-authored-by: tholok97 <thomas.lokkeborg@gmail.com>

--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-  "episodes": 200,
-  "steps": 40,
-  "critic_type": "nn",
-  "critic_nn_dims": [16],
+  "episodes": 3000,
+  "steps": 300,
+  "critic_type": "table",
+  "critic_nn_dims": [16, 8],
   "actor_lr": 0.1,
-  "critic_lr": 0.01,
+  "critic_lr": 0.1,
   "decay": 0.9,
-  "discount": 0.9,
+  "discount": 0.8,
   "epsilon": 0.2,
-  "epsilon_decay": 0.95,
-  "visualise": [1, 99, 199, 299]
+  "epsilon_decay": 0.995,
+  "visualise": [499, 999, 1999, 2999]
 }
