feat: move gambler config to file
also fix print introduced by Thomas in earlier commit

--- a/rl-config.json
+++ b/rl-config.json
@@ -1,5 +1,8 @@
 {
   "problem": "gambler",
+  "problem_params": {
+    "win_prob": 0.5
+  },
   "episodes": 3000,
   "steps": 300,
   "critic_type": "table",
